Added root node checks to TreeNodeIterator to avoid iteration errors Updated IOLib to support relative file paths (Bug #1775875 from anonymous) Updated JRangeSlider to support drags from arrow buttons (Bug #1747778 from colincombe) Updated ExpressionParser to avoid long parse bug (Bug #1741759) Updated TupleManager to expand tuple list in face of valid rows from CascadedTable instances (Bug #1741106) Added checks for min==max condition in NumberRangeModel (Bug #1731911) Added patch to Activity and ActivityManager to avoid deadlock on Activity.cancel() (Bug #1708926 fix from joperry) Fixed javadoc example for DefaultRendererFactory (Bug #1674371 from cab938) Fixed ENDPOLYGON field in VisualItem (Bug #1554408 from dimerman) Fixed FisheyeMenu demo to avoid deadlock (Bug #1672798) Updated Tree.getDepth to return -1 if node is valid (in the node table) but not in tree (fix from joperry) Added Display.reset method to release used memory from an idle, unused Display instance Added Graph.removeAllGraphListeners() method Added Table.removeAllTableListeners() method Added isAsynchronous / setAsynchronous methods to ImageFactory Updated Visualization.invalidate to invalidate just the group specified (it incorrectly was invalidating all groups) Updated ActivityManager._schedule to call notifyAll when an already scheduled item is re-scheduled